kubernetes/manifests/generated/production/infrastructure/nginx-ingress-controller/1-manifest/service-default-nginx-ingress-controller-default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"default-backend","app.kubernetes.io/instance":"nginx-ingress-controller","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"nginx-ingress-controller","helm.sh/chart":"nginx-ingress-controller-9.1.22"},"name":"nginx-ingress-controller-default-backend","namespace":"default"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":"http"}],"selector":{"app.kubernetes.io/comp [...]
  labels:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: nginx-ingress-controller
    helm.sh/chart: nginx-ingress-controller-9.1.22
  name: nginx-ingress-controller-default-backend
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/name: nginx-ingress-controller
  type: ClusterIP
